--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -7,6 +7,8 @@
 	:runtime-requirement    [ :on "Moo 1.006000"^^:CpanId ];
 	:runtime-requirement    [ :on "Sub::Util 1.40"^^:CpanId ];
 	:runtime-requirement    [ :on "Types::Standard 0.030"^^:CpanId ];
+	:runtime-requirement    [ :on "match::simple"^^:CpanId ];
+	:runtime-recommendation [ :on "match::simple::XS"^^:CpanId ];
 	:runtime-recommendation [ :on "MooseX::Enumeration"^^:CpanId ];
 	:test-requirement       [ :on "Test::More 0.96"^^:CpanId ];
 	:test-requirement       [ :on "Test::Fatal"^^:CpanId ];
