--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -6,13 +6,14 @@
 	:runtime-requirement    [ :on "perl 5.008001"^^:CpanId ];
 	:runtime-requirement    [ :on "Moo 1.006000"^^:CpanId ];
 	:runtime-requirement    [ :on "Sub::Util 1.40"^^:CpanId ];
-	:runtime-requirement    [ :on "Types::Standard 0.030"^^:CpanId ];
+	:runtime-requirement    [ :on "Type::Tiny::Enum 0.030"^^:CpanId ];
 	:runtime-requirement    [ :on "match::simple"^^:CpanId ];
 	:runtime-requirement    [ :on "Eval::TypeTiny"^^:CpanId ];
 	:runtime-recommendation [ :on "match::simple::XS"^^:CpanId ];
-	:runtime-recommendation [ :on "MooseX::Enumeration"^^:CpanId ];
+	:runtime-recommendation [ :on "MooseX::Enumeration"::Tiny::Enum ];
 	:test-requirement       [ :on "Test::More 0.96"^^:CpanId ];
 	:test-requirement       [ :on "Test::Fatal"^^:CpanId ];
+	:test-requirement       [ :on "Types::Standard 0.030"^^:CpanId ];
 	:test-recommendation    [ :on "MooseX::Enumeration"^^:CpanId ];
 	:develop-recommendation [ :on "Dist::Inkt 0.001"^^:CpanId ];
 	.
